--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,5 @@ Moduo2/Server/App.config
 Moduo2/Logs/LogFile.txt
 Moduo2/Client/App.config
 Moduo2/Server/App.config
+Moduo2/Server/App.config
+Moduo2/Server/App.config
