--- a/Moduo2/BDD/BDD.csproj
+++ b/Moduo2/BDD/BDD.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{64A3C69F-FEED-46A5-8A14-3058CADDAAC8}</ProjectGuid>
+    <ProjectGuid>{ADE4ABCD-4456-4A31-8D3A-B0361137C500}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BDD</RootNamespace>
@@ -30,8 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.core">
+      <HintPath>..\packages\NUnitTestAdapter.2.0.0\lib\nunit.core.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="nunit.core.interfaces">
+      <HintPath>..\packages\NUnitTestAdapter.2.0.0\lib\nunit.core.interfaces.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.util">
+      <HintPath>..\packages\NUnitTestAdapter.2.0.0\lib\nunit.util.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="NUnit.VisualStudio.TestAdapter">
+      <HintPath>..\packages\NUnitTestAdapter.2.0.0\lib\NUnit.VisualStudio.TestAdapter.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,131 +62,40 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddingTasks.feature.cs">
+    <Compile Include="AddEmployee.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AddingTasks.feature</DependentUpon>
+      <DependentUpon>AddEmployee.feature</DependentUpon>
     </Compile>
-    <Compile Include="AddingTasksSteps.cs" />
-    <Compile Include="AddingUserstory.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>AddingUserstory.feature</DependentUpon>
-    </Compile>
-    <Compile Include="AddingUserstorySteps.cs" />
-    <Compile Include="AddNewEmployee.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>AddNewEmployee.feature</DependentUpon>
-    </Compile>
-    <Compile Include="AddNewEmployeeSteps.cs" />
-    <Compile Include="ClaimingTasks.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ClaimingTasks.feature</DependentUpon>
-    </Compile>
-    <Compile Include="ClaimingTasksSteps.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="AddEmployeeSteps.cs" />
     <Compile Include="EditEmployeeData.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EditEmployeeData.feature</DependentUpon>
     </Compile>
     <Compile Include="EditEmployeeDataSteps.cs" />
-    <Compile Include="LogIn.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LogIn.feature</DependentUpon>
-    </Compile>
-    <Compile Include="LogInSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestForPartnership.feature.cs">
+    <Compile Include="ShowAllEmployees.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>RequestForPartnership.feature</DependentUpon>
+      <DependentUpon>ShowAllEmployees.feature</DependentUpon>
     </Compile>
-    <Compile Include="RequestForPartnershipSteps.cs" />
-    <Compile Include="RequestForProject.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>RequestForProject.feature</DependentUpon>
-    </Compile>
-    <Compile Include="RequestForProjectSteps.cs" />
-    <Compile Include="ShowAllHiringCompanies.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ShowAllHiringCompanies.feature</DependentUpon>
-    </Compile>
-    <Compile Include="ShowAllHiringCompaniesSteps.cs" />
-    <Compile Include="ShowAllLoggedinEmployees.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ShowAllLoggedinEmployees.feature</DependentUpon>
-    </Compile>
-    <Compile Include="ShowAllLoggedinEmployeesSteps.cs" />
-    <Compile Include="ShowAllTeams.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ShowAllTeams.feature</DependentUpon>
-    </Compile>
-    <Compile Include="ShowAllTeamsSteps.cs" />
-    <Compile Include="TeamProjectAssign.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TeamProjectAssign.feature</DependentUpon>
-    </Compile>
-    <Compile Include="TeamProjectAssignSteps.cs" />
+    <Compile Include="ShowAllEmployeesSteps.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="AddingTasks.feature">
+    <None Include="AddEmployee.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>AddingTasks.feature.cs</LastGenOutput>
-    </None>
-    <None Include="AddingUserstory.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>AddingUserstory.feature.cs</LastGenOutput>
-    </None>
-    <None Include="AddNewEmployee.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>AddNewEmployee.feature.cs</LastGenOutput>
+      <LastGenOutput>AddEmployee.feature.cs</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="ClaimingTasks.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>ClaimingTasks.feature.cs</LastGenOutput>
-    </None>
     <None Include="EditEmployeeData.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>EditEmployeeData.feature.cs</LastGenOutput>
     </None>
-    <None Include="LogIn.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>LogIn.feature.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
-    <None Include="RequestForPartnership.feature">
+    <None Include="ShowAllEmployees.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>RequestForPartnership.feature.cs</LastGenOutput>
-    </None>
-    <None Include="RequestForProject.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>RequestForProject.feature.cs</LastGenOutput>
-    </None>
-    <None Include="ShowAllHiringCompanies.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>ShowAllHiringCompanies.feature.cs</LastGenOutput>
-    </None>
-    <None Include="ShowAllLoggedinEmployees.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>ShowAllLoggedinEmployees.feature.cs</LastGenOutput>
-    </None>
-    <None Include="ShowAllTeams.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>ShowAllTeams.feature.cs</LastGenOutput>
-    </None>
-    <None Include="TeamProjectAssign.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>TeamProjectAssign.feature.cs</LastGenOutput>
+      <LastGenOutput>ShowAllEmployees.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
