--- a/Moduo2/Client/Client.csproj
+++ b/Moduo2/Client/Client.csproj
@@ -39,6 +39,9 @@
     <Reference Include="ICommon">
       <HintPath>..\..\Common\ICommon\bin\Debug\ICommon.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.6.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
