--- a/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
+++ b/Moduo1/HiringCompanyTest/HiringCompanyTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DatabaseAccessTest\AccessDBTest.cs" />
     <Compile Include="DatabaseAccessTest\HiringCompanyDBTest.cs" />
     <Compile Include="DatabaseAccessTest\InternalDatabaseTest.cs" />
+    <Compile Include="NotifierTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmployeeServiceTest.cs" />
     <Compile Include="Services\HiringServiceTest.cs" />
